# Modbus-Tool

./: CMakeLists.txt  README.md
doc/: readme.txt
src/: CMakeLists.txt  MainWindow.ui  common.cpp  common.h  main.cpp  mainWindow.cpp  mainWindow.h  modBusService.hpp  serialManager.cpp  serialManager.h  tableManager.cpp  tableManager.h
